// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ENREName of anonymous ArrowFunction 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "ArrowFunction",
}
`;

exports[`ENREName of anonymous ArrowFunction 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "ArrowFunction",
}
`;

exports[`ENREName of anonymous Block 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Block",
}
`;

exports[`ENREName of anonymous Block 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Block",
}
`;

exports[`ENREName of anonymous Block 3`] = `
ENREName {
  "extra": "1:1",
  "kind": "Anon",
  "payload": "Block",
}
`;

exports[`ENREName of anonymous Block 4`] = `
ENREName {
  "extra": "1:1",
  "kind": "Anon",
  "payload": "Block",
}
`;

exports[`ENREName of anonymous Class 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Class",
}
`;

exports[`ENREName of anonymous Class 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Class",
}
`;

exports[`ENREName of anonymous Function 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Function",
}
`;

exports[`ENREName of anonymous Function 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Anon",
  "payload": "Function",
}
`;

exports[`ENREName of class private identifier 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Pvt",
  "payload": "foo",
}
`;

exports[`ENREName of class private identifier 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Pvt",
  "payload": "foo",
}
`;

exports[`ENREName of file name 1`] = `
ENREName {
  "extra": undefined,
  "kind": "File",
  "payload": "foo.js",
}
`;

exports[`ENREName of file name 2`] = `
ENREName {
  "extra": undefined,
  "kind": "File",
  "payload": "foo.js",
}
`;

exports[`ENREName of numeric literal 1`] = `
ENREName {
  "extra": 123,
  "kind": "Num",
  "payload": "123",
}
`;

exports[`ENREName of numeric literal 2`] = `
ENREName {
  "extra": 1e-10,
  "kind": "Num",
  "payload": "1e-10",
}
`;

exports[`ENREName of signature declaration Callable 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "Callable",
}
`;

exports[`ENREName of signature declaration Callable 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "Callable",
}
`;

exports[`ENREName of signature declaration NumberIndex 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "NumberIndex",
}
`;

exports[`ENREName of signature declaration NumberIndex 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "NumberIndex",
}
`;

exports[`ENREName of signature declaration StringIndex 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "StringIndex",
}
`;

exports[`ENREName of signature declaration StringIndex 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Sig",
  "payload": "StringIndex",
}
`;

exports[`ENREName of string literal 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Str",
  "payload": "a-not-valid-identifier",
}
`;

exports[`ENREName of string literal 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Str",
  "payload": "a-not-valid-identifier",
}
`;

exports[`ENREName of unknown 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Unk",
  "payload": undefined,
}
`;

exports[`ENREName of unknown 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Unk",
  "payload": undefined,
}
`;

exports[`ENREName of valid string identifier 1`] = `
ENREName {
  "extra": undefined,
  "kind": "Norm",
  "payload": "foo",
}
`;

exports[`ENREName of valid string identifier 2`] = `
ENREName {
  "extra": undefined,
  "kind": "Norm",
  "payload": "foo",
}
`;
